# chessLLM

./: .gitignore  ChessLLM.ipynb  README.md  chess-llm.ipynb  data_visualisation.ipynb  entrainement.ipynb  pyproject.toml  rapport.tex  test.py
interface/src/: board.py  game.py  main.py  move_generator.py
